Otimizações: Otimizações no algoritmo de Tarjan (usando adjacencia como parâmetro ao invés de reconstruir o grafo inteiro a cada chamada); implementação do Tarjan no Fleury. Mudança no número de vértices dos grafos de 100.000 vértices para serem mais densos.